# MiniWorkbench

./: .gitignore  CMakeLists.txt  项目书.md
docs/superpowers/specs/: 2026-06-11-desktop-dashboard-design.md
qml/: GridLayoutEngine.qml  Main.qml
src/: WindowManager.cpp  WindowManager.h  database_manager.cpp  database_manager.h  git_analyzer.cpp  git_analyzer.h  heatmap_item.cpp  heatmap_item.h  main.cpp  todo_model.cpp  todo_model.h  widget_config_model.cpp  widget_config_model.h  window_manager.cpp  window_manager.h
